Work around KDateTime::fromString being to strict.

This could be concidered a kdelibs bug because akregator has the same problem.

My motivation for fixing this corner case in amarok is because it probably works in iTunes which is what most podcasts are tested with.
BUG:231062